@@ -43,7 +43,7 @@
   <AntyCorpsesqueeze.label>Corpse squeeze</AntyCorpsesqueeze.label>
   <AntyCorpsesqueeze.description>Using corpses to create an extract.</AntyCorpsesqueeze.description>
   <AntyCorpsesqueeze.jobString>Corpse squeeze</AntyCorpsesqueeze.jobString>
-  <CookProtyGum.label>Cook Proty Gum ×10</CookProtyGum.label>
+  <CookProtyGum.label>Cook Proty Gum ×10</CookProtyGum.label><!-- Change -->
   <CookProtyGum.description>Cook Proty Gum.</CookProtyGum.description>
   <CookProtyGum.jobString>Cook Proty Gum</CookProtyGum.jobString>
 </LanguageData>
