@@ -148,4 +148,7 @@
   <AntyTransitionRefleum.labelNoun>변이 리플리움</AntyTransitionRefleum.labelNoun>
   <AntyTransitionRefleum.description>생존력 증가의 부작용입니다. 전염성을 가지고 있으며 앤티의 공격성을 증가시킵니다.</AntyTransitionRefleum.description>
   <AntyTransitionRefleum.comps.HediffComp_VerbGiver.tools.0.label>큰 턱</AntyTransitionRefleum.comps.HediffComp_VerbGiver.tools.0.label>
+
+  <AT_Shield.label>물리력 차단 보호막</AT_Shield.label>
+  <AT_Shield.description>모든 피해를 흡수합니다.</AT_Shield.description>
 </LanguageData>
