@@ -70,14 +70,14 @@
   
   
   <AT_AP_Power_C.label>앤티 디노포네라 아머</AT_AP_Power_C.label>
-  <AT_AP_Power_C.description>앤티들이 자신들의 약점인 독과 불에 대응하기 위해서 개발된 강화복입니다. 리플리움을 기반으로 한 다수의 방열, 단열판이 온도에 따라 작동하며 체내에 들어오는 독성 물질을 정화합니다. 하지만 여전히 식중독에는 걸립니다.\n\n 두터운 장갑 때문에 이동이 불편하지만 직접 이동하는 대신에 적을 끌어올 수 있습니다.</AT_AP_Power_C.description>
+  <AT_AP_Power_C.description>앤티들이 자신들의 약점인 독과 불에 대응하기 위해서 개발된 강화복입니다. 리플리움을 기반으로 한 다수의 방열, 단열판이 온도에 따라 작동하며 체내에 들어오는 독성 물질을 정화합니다. 하지만 여전히 식중독에는 걸립니다.\n\n 두터운 장갑 때문에 이동이 불편하지만 모든 피해를 흡수하는 보호막을 전개할 수 있습니다.</AT_AP_Power_C.description>
   <AT_AP_Power_Head_C.label>앤티 디노포네라 헬멧</AT_AP_Power_Head_C.label>
   <AT_AP_Power_Head_C.description>앤티들이 자신들의 약점인 독과 불에 대응하기 위해서 개발된 강화복 헬멧입니다. 리플리움을 기반으로 한 다수의 방열, 단열판이 온도에 따라 작동하며 체내에 들어오는 독성 물질을 정화합니다. 하지만 여전히 식중독에는 걸립니다.</AT_AP_Power_Head_C.description>
   <AT_AP_AdditionalPower_C.label>앤티 디노포네라 사이드아머</AT_AP_AdditionalPower_C.label>
   <AT_AP_AdditionalPower_C.description>앤티들이 자신들의 약점인 불에 대응하기 위해서 개발된 강화복입니다. 리플리움을 기반으로 한 다수의 방열, 단열판이 온도에 따라 작동합니다.</AT_AP_AdditionalPower_C.description>
-  <AT_AP_Power_C.comps.CompReloadable.chargeNoun>외교용 사슬</AT_AP_Power_C.comps.CompReloadable.chargeNoun>
-  <AT_AP_Power_C.verbs.0.label>외교용 사슬 발사</AT_AP_Power_C.verbs.0.label>
-  <BulletExecutionerChain.label>외교용 사슬</BulletExecutionerChain.label>
+  <AT_AP_Power_C.comps.CompReloadable.chargeNoun>물리력 차단 보호막</AT_AP_Power_C.comps.CompReloadable.chargeNoun>
+  <AT_AP_Power_C.verbs.0.label>물리력 차단 보호막 발사</AT_AP_Power_C.verbs.0.label>
+  <BulletExecutionerChain.label>물리력 차단 보호막</BulletExecutionerChain.label>
   
   <AT_AP_Power_D.label>앤티 파라포네라 아머</AT_AP_Power_D.label>
   <AT_AP_Power_D.description>앤티들이 자신들의 약점인 독과 불에 대응하기 위해서 개발된 강화복입니다. 리플리움을 기반으로 한 다수의 방열, 단열판이 온도에 따라 작동하며 체내에 들어오는 독성 물질을 정화합니다. 하지만 여전히 식중독에는 걸립니다.\n\n적의 무장을 해제시킬 수 있습니다.</AT_AP_Power_D.description>
